src/widgets/snapshots/tvision__widgets__list_viewer__tests__snapshot_multi_col.snap
---
source: src/widgets/list_viewer.rs
expression: "render(&mut l, 16, 3)"
---
size: 16x3
cursor: hidden
text:
| item0  │ item3 |
| item1  │ item4 |
| item2  │ item5 |
attr:
|aaaaaaaabccccccc|
|ccccccccbccccccc|
|ccccccccbccccccc|
legend:
  . default
  a fg=RGB(255,255,255) bg=RGB(0,170,0)
  b fg=RGB(0,0,170) bg=RGB(0,170,170)
  c fg=RGB(0,0,0) bg=RGB(0,170,170)
