src/widgets/snapshots/tvision__widgets__list_viewer__tests__snapshot_single_col_active_focused_and_selected.snap
---
source: src/widgets/list_viewer.rs
expression: "render(&mut l, 12, 4)"
---
size: 12x4
cursor: hidden
text:
| item0      |
| item1      |
| item2      |
|            |
attr:
|aaaaaaaaaaaa|
|bbbbbbbbbbbb|
|cccccccccccc|
|aaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(0) bg=BIOS(3)
  b fg=BIOS(15) bg=BIOS(2)
  c fg=BIOS(14) bg=BIOS(3)
